# whisperKeyboard

./: .gitignore  .gitmodules  agents.md
.github/workflows/: build.yml
android/: gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp  whisper_jni.h
android/app/src/main/java/com/whisperkeyboard/: AppPreferences.kt  CommandProcessor.kt  SettingsActivity.kt  TextPostProcessor.kt  VoiceCommands.kt  WhisperEngine.kt  WhisperIME.kt
android/app/src/main/res/animator/: mic_pulse.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_mic.xml  mic_button_bg.xml
android/app/src/main/res/layout/: activity_settings.xml  keyboard.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: method.xml
core/: __init__.py  commands.py  commands.yaml  config.py  config.yaml  text_post.py
docs/: 00-master-checklist.md  01-windows-status.md  02-android-plan.md
windows/: __init__.py  audio_recorder.py  hotkey_listener.py  main.py  main.spec  pipeline.py  requirements.txt  settings_window.py  test_pipeline.py  text_injector.py  tray_app.py  whisper_engine.py
